# demo-beta

./: .gitignore  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
.scripts/: sidecar.js
demo-sidecar/: Cargo.toml
demo-sidecar/src/: main.rs
src/: App.css  App.tsx  Navbar.css  Navbar.tsx  routes.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src/components/: Greeter.tsx  Home.css  Home.tsx  ResourceReader.tsx  Sidecar.tsx
